# VecheChat

./: .gitignore  CMakeLists.txt  README.md  run_example.sh
.github/workflows/: ci.yml
algorithm/raft/: CMakeLists.txt  raft.h
algorithm/raft/core/: messages.h  raft_core.cpp  raft_core.h  strategies.h
algorithm/raft/service/: raft_service.cpp  raft_service.h
algorithm/raft/transport/: iraft_transport.h  peer_info.h  raft_grpc_transport.cpp  raft_grpc_transport.h
common/service_locator/: service_locator.h
common/thread_pool/: thread_pool.cpp  thread_pool.h
common/timer_delegate/: ITimerStrategy.h  TimerDelegate.cpp  TimerDelegate.h
feature/: CMakeLists.txt
feature/messaging/core/: messaging_core.cpp  messaging_core.h
feature/messaging/service/: messaging_service.cpp  messaging_service.h
feature/messaging/transport/: imessaging_transport.h  messaging_grpc_transport.cpp  messaging_grpc_transport.h
protos/: CMakeLists.txt
protos/messaging/: messaging.proto
protos/raft/: raft.proto
src/: main.cpp
src/raft_server/: raft_server.cpp  raft_server.h
tests/: CMakeLists.txt
tests/algorithm/raft/core/: raft_core_test.cpp  strategies_test.cpp
tests/algorithm/raft/service/: raft_service_test.cpp
tests/algorithm/raft/transport/: raft_grpc_transport_test.cpp
tests/utils/service_locator/: service_locator_test.cpp
tests/utils/thread_pool/: thread_pool_test.cpp  threadsafe_queue_test.cpp
tests/utils/timer_delegate/: timer_delegate_test.cpp
utils/logger/: logger.cpp  logger.h
utils/service_locator/: service_locator.h
utils/thread_pool/: thread_pool.cpp  thread_pool.h  threadsafe_queue.h
utils/timer_delegate/: TimerDelegate.cpp  TimerDelegate.h  itimer_strategy.h  timer_delegate.cpp  timer_delegate.h
